--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.15",
     "@mui/material": "^5.0.2",
     "@mui/styled-engine-sc": "^5.0.0",
     "@reduxjs/toolkit": "^1.6.1",
@@ -17,6 +18,7 @@
     "axios": "^0.22.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "graphql": "^15.6.0",
     "i18next": "^21.2.3",
     "lodash": "^4.17.21",
     "lottie-web": "^5.7.13",
@@ -33,6 +35,7 @@
     "react-spring": "^9.2.4",
     "react-table": "^7.7.0",
     "rechart": "^0.0.1",
+    "redux": "^4.1.1",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
