--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-table": "^7.7.0",
     "rechart": "^0.0.1",
     "redux": "^4.1.1",
+    "source-map-explorer": "^2.5.2",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
@@ -43,6 +44,7 @@
     "zustand": "^3.5.12"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
