--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.15",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.2",
     "@mui/styled-engine-sc": "^5.0.0",
     "@reduxjs/toolkit": "^1.6.1",
@@ -14,6 +16,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.14",
     "antd": "^4.16.13",
     "axios": "^0.22.0",
     "formik": "^2.2.9",
@@ -38,6 +41,7 @@
     "redux": "^4.1.1",
     "source-map-explorer": "^2.5.2",
     "styled-components": "^5.3.1",
+    "twin.macro": "^2.7.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9",
@@ -48,7 +52,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "css": "postcss ./src/styles/tailwind.css -o ./src/styles/tailwind.generated.css",
+    "prestart": "yarn css",
+    "prebuild": "yarn css"
   },
   "eslintConfig": {
     "extends": [
@@ -69,6 +76,13 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.18"
+    "@types/react-redux": "^7.1.18",
+    "@types/tailwindcss": "^2.2.1",
+    "autoprefixer": "^10.3.6",
+    "babel-plugin-macros": "^3.1.0",
+    "postcss": "^8.3.8",
+    "postcss-cli": "^9.0.1",
+    "tailwindcss": "^2.2.16",
+    "ts-node": "^10.2.1"
   }
 }
