--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.4.15",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@headlessui/react": "^1.4.1",
     "@mui/material": "^5.0.2",
     "@mui/styled-engine-sc": "^5.0.0",
     "@reduxjs/toolkit": "^1.6.1",
@@ -16,7 +17,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/styled-components": "^5.1.14",
     "antd": "^4.16.13",
     "axios": "^0.22.0",
     "formik": "^2.2.9",
@@ -78,6 +78,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.18",
     "@types/tailwindcss": "^2.2.1",
+    "@types/styled-components": "^5.1.14",
     "autoprefixer": "^10.3.6",
     "babel-plugin-macros": "^3.1.0",
     "postcss": "^8.3.8",
